Fix T51661: Swaping strips does not refresh sequencer